--- a/package.json
+++ b/package.json
@@ -11,17 +11,10 @@
     "start": "next start",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
-    "ts:check": "tsc --noEmit",
-    "prisma:migrate": "prisma migrate dev",
-    "prisma:client": "prisma generate",
-    "prisma:seed": "prisma db seed",
-    "postinstall": "prisma generate"
+    "ts:check": "tsc --noEmit"
   },
   "dependencies": {
     "@bluzzi/eslint-config": "^1.2.1",
-    "@prisma/client": "^5.6.0",
-    "@supabase/auth-helpers-nextjs": "^0.8.7",
-    "@supabase/supabase-js": "^2.38.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "lucide-react": "^0.292.0",
@@ -41,7 +34,6 @@
     "eslint": "^8",
     "eslint-config-next": "14.0.2",
     "postcss": "^8",
-    "prisma": "^5.6.0",
     "tailwindcss": "^3.3.0",
     "ts-node": "^10.9.1",
     "typescript": "^5"
