--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@bluzzi/eslint-config": "^1.2.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "framer-motion": "^11.0.3",
     "lucide-react": "^0.292.0",
     "next": "14.0.2",
     "next-themes": "^0.2.1",
