--- a/.github/workflows/dev-deploy-check.yml
+++ b/.github/workflows/dev-deploy-check.yml
@@ -28,11 +28,12 @@ jobs:
       - name: Run Typescript check
         run: npm run ts:check
   deploy:
+    needs: [lint, typecheck]
     runs-on: ubuntu-latest
     environment:
       name: development
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - name: Install Vercel CLI
         run: npm install --global vercel@latest
       - name: Pull Vercel Environment Information
