--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "start": "next start",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
-    "ts:check": "tsc --noEmit"
+    "ts:check": "tsc --noEmit",
+    "sb:dev": "storybook dev -p 6006",
+    "sb:build": "storybook build"
   },
   "dependencies": {
     "@bluzzi/eslint-config": "^1.2.1",
@@ -31,13 +33,23 @@
     "zustand": "^4.5.0"
   },
   "devDependencies": {
+    "@storybook/addon-essentials": "^7.6.17",
+    "@storybook/addon-interactions": "^7.6.17",
+    "@storybook/addon-links": "^7.6.17",
+    "@storybook/addon-onboarding": "^1.0.11",
+    "@storybook/blocks": "^7.6.17",
+    "@storybook/nextjs": "^7.6.17",
+    "@storybook/react": "^7.6.17",
+    "@storybook/test": "^7.6.17",
     "@types/node": "^20.11.6",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
     "autoprefixer": "^10.4.17",
     "eslint": "^8.56.0",
     "eslint-config-next": "14.0.2",
+    "eslint-plugin-storybook": "^0.8.0",
     "postcss": "^8.4.33",
+    "storybook": "^7.6.17",
     "tailwindcss": "^3.4.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
@@ -45,7 +57,8 @@
   "eslintConfig": {
     "extends": [
       "next/core-web-vitals",
-      "@bluzzi/eslint-config"
+      "@bluzzi/eslint-config",
+      "plugin:storybook/recommended"
     ]
   }
 }
