--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "storybook": "^7.6.17",
     "tailwindcss": "^3.4.1",
     "ts-node": "^10.9.2",
+    "tsconfig-paths-webpack-plugin": "^4.1.0",
     "typescript": "^5.3.3"
   },
   "eslintConfig": {
