--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "zustand": "^4.5.0"
   },
   "devDependencies": {
+    "@storybook/addon-actions": "^7.6.17",
     "@storybook/addon-essentials": "^7.6.17",
     "@storybook/addon-interactions": "^7.6.17",
     "@storybook/addon-links": "^7.6.17",
