--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@storybook/addon-links": "^7.6.17",
     "@storybook/addon-onboarding": "^1.0.11",
     "@storybook/blocks": "^7.6.17",
+    "@storybook/components": "^7.6.17",
     "@storybook/manager-api": "^7.6.17",
     "@storybook/nextjs": "^7.6.17",
     "@storybook/react": "^7.6.17",
@@ -52,6 +53,7 @@
     "eslint": "^8.56.0",
     "eslint-config-next": "14.0.2",
     "eslint-plugin-storybook": "^0.8.0",
+    "polished": "^4.3.1",
     "postcss": "^8.4.33",
     "storybook": "^7.6.17",
     "tailwindcss": "^3.4.1",
