--- a/.github/workflows/dev-deploy-check.yml
+++ b/.github/workflows/dev-deploy-check.yml
@@ -27,8 +27,18 @@ jobs:
         run: npm install
       - name: Run Typescript check
         run: npm run ts:check
+  unit-test:
+    name: Unit test
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/setup-node@v3
+      - uses: actions/checkout@v3
+      - name: Install dependencies
+        run: npm install
+      - name: Run unit test
+        run: npm run test:unit
   deploy:
-    needs: [lint, typecheck]
+    needs: [lint, typecheck, unit-test]
     runs-on: ubuntu-latest
     environment:
       name: development
