--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "zustand": "^4.5.0"
   },
   "devDependencies": {
+    "@playwright/experimental-ct-react": "^1.42.1",
+    "@playwright/test": "^1.42.1",
     "@storybook/addon-actions": "^7.6.17",
     "@storybook/addon-essentials": "^7.6.17",
     "@storybook/addon-interactions": "^7.6.17",
