chore(.gitignore): update .gitignore to exclude /test-results/, /playwright-report/, and /playwright/.cache/ directories chore(package.json): update project name and description in package.json feat(package.json): add test:ui and test:e2e scripts for Playwright tests in package.json feat(playwright-unit.config.ts): add Playwright unit test configuration file feat(playwright.config.ts): add Playwright test configuration file feat(playwright/index.html): add index.html for Playwright tests feat(playwright/index.tsx): add index.tsx for Playwright tests feat(src/lib/components/ui/button/button.test.tsx): add unit test for Button component refactor(src/lib/sections/sponsors.section.tsx): refactor sponsors section to fix randomizeArray usage and improve readability

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "CuicuiteDays Website",
+  "name": "@lcds-evenements/website",
   "version": "1.0.0",
-  "description": "CuicuiteDays Website",
+  "description": "Website of the festival Les CuicuiteDays",
   "repository": "https://github.com/LCDS-Evenements/website",
   "author": "hcampos",
   "private": false,
@@ -14,7 +14,9 @@
     "ts:check": "tsc --noEmit",
     "sb:dev": "storybook dev -p 6006",
     "sb:build": "storybook build",
-    "test:unit": "vitest --ui"
+    "test:unit": "vitest --ui",
+    "test:ui": "playwright test -c playwright-unit.config.ts",
+    "test:e2e": "playwright test"
   },
   "dependencies": {
     "@bluzzi/eslint-config": "^1.2.1",
