--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@types/react-dom": "^18.2.21",
     "@vitest/ui": "^1.3.1",
     "autoprefixer": "^10.4.18",
+    "dotenv": "^16.4.5",
     "eslint": "^8.57.0",
     "eslint-config-next": "14.1.3",
     "eslint-plugin-storybook": "^0.8.0",
